fix title spacing

--- a/src/components/Form/FileUpload/FileUpload.module.scss
+++ b/src/components/Form/FileUpload/FileUpload.module.scss
@@ -30,6 +30,9 @@
   background-color: var(--input-background-color);
   padding: 0.25rem 1.25rem;
   position: relative;
+  .file-upload-title {
+    margin: 0 0 0.25rem 0;
+  }
   @include transition(all, 0.2s, ease-in-out);
   &.error {
     span[data-icon-status],
